src/main/java/com/example/RestTicketSystem/error/exception/ResourceAlreadyExistsException.java
package com.example.RestTicketSystem.error.exception;

public class ResourceAlreadyExistsException extends Exception {

    public ResourceAlreadyExistsException() {
    }

    public ResourceAlreadyExistsException(String msg) {
        super(msg);
    }
}